@@ -37,6 +37,7 @@ Version 1.4.7 - CVS
   - Stop URL parsing, if 8bit symbols or HTML entities are detected (#1356798).
   - Improve recovery when EHLO not supported on legacy SMTP servers
     (#1031455).
+  - Don't move messages when target mailbox matches source mailbox (#1409453).
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
